Fix log class and new EXCEPTION log level